# jetson-develop

./: .gitignore
apps/: arm.py  config.py  config_camera.py  config_dual.py  config_single.py  demo.py  demo_right.py  direct_link.xml  fk_candidates.py  frame_transform.py  gripper.py  infer.py  infer_dual.py  joint_map.py  robot_control.py  runner.py  runner_dual.py  runner_dual_ros2.py  start_camera_publisher.sh  stop_camera_publisher.sh
apps/camera/: camera.py  camera_publisher.py  camera_topics.py  camera_utils.py  camera_viewer.py  camera_viewer_ros2.py
apps/tests/: calib_angle.py  calib_joints.py  camera_stress_test.py  derive_frames.py  diag_calib_right.py  dump_joint_pos_18.py  find_R.py  left_arm_action_deg.csv  replay_arm.py  right_arm_action_deg.csv  scan_home_j1.py  set_joints_home.py  test_arm.py  test_arm_utils.py  test_camera.py  test_circle.py  test_gripper.py  test_joint_limits.py  test_joint_map.py  test_seeds.py  test_timing.py  test_wrench.py  test_wrench_calib.py  try_mapped_home.py  urdf_fk.py  verify_ee_frame.py
config/: bashrc_template.sh  fastdds_no_shm.xml  robot_env.sh  robots.yaml
drivers/: README.md  arm_utils.py  gripper_utils.py  tactile_utils.py  wrench_source.py
nodes/src/arm_client/: README.md  package.xml  setup.cfg  setup.py
nodes/src/arm_client/arm_client/: __init__.py  cli.py  client.py
nodes/src/arm_interfaces/: CMakeLists.txt  package.xml
nodes/src/arm_interfaces/action/: GoHome.action  MoveToJoints.action  MoveToPose.action
nodes/src/arm_interfaces/msg/: ArmStatus.msg  JointCommand.msg
nodes/src/arm_interfaces/srv/: SetCtrlMode.srv
nodes/src/camera_driver/: README.md  package.xml  setup.py
nodes/src/camera_driver/camera_driver/: camera_publisher_node.py  camera_viewer_node.py  list_cameras.py  topics.py
nodes/src/camera_driver/launch/: camera.launch.py
nodes/src/gripper_interfaces/: CMakeLists.txt  package.xml
nodes/src/gripper_interfaces/action/: Grip.action
nodes/src/gripper_interfaces/msg/: GripperCommand.msg  GripperState.msg  GripperStatus.msg
nodes/src/mqtt_gateway/: mqtt_protocol.md  package.xml  setup.cfg  setup.py
nodes/src/mqtt_gateway/config/: gateway_config.yaml
nodes/src/mqtt_gateway/launch/: mqtt_gateway.launch.py
nodes/src/mqtt_gateway/mock/: mock_services.py
nodes/src/mqtt_gateway/mqtt_gateway/: dispatcher.py  event_forwarder.py  gateway_node.py  mqtt_adapter.py
nodes/src/mqtt_gateway/mqtt_gateway/handlers/: base.py  instance_handlers.py  subscription_handlers.py  template_handlers.py
nodes/src/mqtt_gateway/test/: mock_task_manager.py  send_cmd.py  test_client.py
nodes/src/rs485_gripper_driver/: package.xml  setup.cfg  setup.py
nodes/src/rs485_gripper_driver/launch/: gripper.launch.py
nodes/src/rs485_gripper_driver/rs485_gripper_driver/: gripper_node.py
nodes/src/tactile_driver/: package.xml  setup.cfg  setup.py
nodes/src/tactile_driver/launch/: tactile.launch.py
nodes/src/tactile_driver/tactile_driver/: tactile_node.py
nodes/src/task_interfaces/: CMakeLists.txt  package.xml
nodes/src/task_interfaces/msg/: TaskInstanceDetail.msg  TaskInstanceSummary.msg  TaskStatusEvent.msg  TaskTemplateDetail.msg
nodes/src/task_interfaces/srv/: GetTaskInstanceDetail.srv  GetTaskTemplateDetail.srv  ListActiveTaskInstances.srv  ListHistoryTaskInstances.srv  ListTaskTemplates.srv  ListTaskTypes.srv  PauseResumeTask.srv  StartTask.srv  SubscribeTaskStatus.srv  TerminateTask.srv  UnsubscribeTaskStatus.srv  ValidateTask.srv
nodes/src/task_manager/: CMakeLists.txt  package.xml
nodes/src/task_manager/msg/: TaskInstanceDetail.msg  TaskInstanceSummary.msg  TaskStatusEvent.msg  TaskTemplateDetail.msg  TaskTemplateSummary.msg  TaskTypeInfo.msg
nodes/src/task_manager/srv/: GetTaskInstanceDetail.srv  GetTaskTemplateDetail.srv  ListActiveTaskInstances.srv  ListHistoryTaskInstances.srv  ListTaskTemplates.srv  ListTaskTypes.srv  PauseResumeTask.srv  StartTask.srv  SubscribeTaskStatus.srv  TerminateTask.srv  UnsubscribeTaskStatus.srv  ValidateTask.srv
nodes/src/tj_marvin_driver/: README.md  REAL_HARDWARE.md  package.xml  setup.cfg  setup.py
nodes/src/tj_marvin_driver/launch/: tj_marvin.launch.py
nodes/src/tj_marvin_driver/tj_marvin_driver/: arm_node.py
nodes/src/work_interfaces/: CMakeLists.txt  package.xml  work_interfaces_design.md
nodes/src/work_interfaces/msg/: WorkDetail.msg  WorkExecutorInfo.msg  WorkInstanceDetail.msg  WorkInstanceSummary.msg  WorkPrecheckItem.msg  WorkStatusEvent.msg  WorkSummary.msg  WorkTaskInfo.msg  WorkTaskInstanceDetail.msg  WorkTaskInstanceSummary.msg
nodes/src/work_interfaces/srv/: WorkGetTaskInstance.srv  WorkGetWork.srv  WorkGetWorkInstance.srv  WorkListHistoryWorks.srv  WorkListRunningWorks.srv  WorkListTaskTypes.srv  WorkListWorks.srv  WorkPrecheck.srv  WorkResumeWork.srv  WorkStartWork.srv  WorkStopWork.srv
nodes/src/xense_gripper_driver/: README.md  package.xml  setup.cfg  setup.py
nodes/src/xense_gripper_driver/launch/: xense_gripper.launch.py
nodes/src/xense_gripper_driver/xense_gripper_driver/: gripper_node.py
sdk/: README.md  fastdds_unicast_profile.xml.template
sdk/demo/: camera_viewer.py  runner_dual_ros2.py
sdk/src/: arm_client  arm_interfaces  gripper_interfaces
tools/: get_gripper_mac.sh  list_cameras.py  package_sdk.sh  robot_up.sh
