<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactile_driver</name>
  <version>0.0.0</version>
  <description>Xense 视触觉传感器 ROS2 驱动节点（左/右，通过算力卡 MAC 远程连接）</description>
  <maintainer email="lvyongsh@msn.com">lvyong</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- xensesdk 为系统依赖（pip install），不走 rosdep -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
