<?xml version="1.0"?>
<package format="3">
  <name>task_interfaces</name>
  <version>0.1.0</version>
  <description>Task manager ROS2 interface definitions (msg/srv), shared by task_manager and task_gateway</description>
  <maintainer email="lvyongsh@msn.com">lvyong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
