<?xml version="1.0"?>
<package format="3">
  <name>work_interfaces</name>
  <version>0.1.0</version>
  <description>Long Task Chain (Work) ROS2 interface definitions (msg/srv) for Web App ↔ mqtt_gateway ↔ Backend</description>
  <maintainer email="lvyongsh@msn.com">lvyong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
